--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -46,4 +46,14 @@ jobs:
           PY
           )"
 
-          echo "Manif
+          echo "Manifest version: $MANIFEST_VERSION"
+
+          if [ "$MANIFEST_VERSION" != "$VERSION_FROM_TAG" ]; then
+            echo "::error::Tag version ($VERSION_FROM_TAG) does not match manifest.json version ($MANIFEST_VERSION)"
+            exit 1
+          fi
+
+      - name: Create GitHub Release
+        uses: softprops/action-gh-release@v2
+        with:
+          generate_release_notes: true
